[gd_scene load_steps=2 format=3 uid="uid://dosu6sujnd7ma"]

[ext_resource type="Script" path="res://Addons/LevelEditor/UI/EditorUI.gd" id="1_2x676"]

[node name="EditorUi" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2x676")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HFlowContainer" type="HFlowContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Pencil" type="Button" parent="VBoxContainer/HFlowContainer"]
layout_mode = 2
text = "Pencil"

[node name="Fill" type="Button" parent="VBoxContainer/HFlowContainer"]
layout_mode = 2
text = "Fill"

[node name="Elevation" type="Label" parent="VBoxContainer/HFlowContainer"]
layout_mode = 2
text = "Elevation"

[node name="Raise" type="Button" parent="VBoxContainer/HFlowContainer"]
layout_mode = 2
text = "Raise"

[node name="Lower" type="Button" parent="VBoxContainer/HFlowContainer"]
layout_mode = 2
text = "Lower"

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2

[connection signal="pressed" from="VBoxContainer/HFlowContainer/Pencil" to="." method="_on_pencil_pressed"]
[connection signal="pressed" from="VBoxContainer/HFlowContainer/Raise" to="." method="_on_raise_pressed"]
[connection signal="pressed" from="VBoxContainer/HFlowContainer/Lower" to="." method="_on_lower_pressed"]
